[package]
name = "openapi"
version = "0.1.0"
edition = "2021"

[dependencies]
ferris-says = "0.3.1"
mongodb = "2.8.2"
tokio = { version = "1", features = ["full"] }
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }

[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["mongodb"]